# google-connections-mcp

./: .gitignore  README.md  auth_manager.py  calendar_credentials.json  oauth_config.py  pyproject.toml  railway.json  requirements.txt  server.py  sheet_mapper.py
src/google_connections_mcp/: __init__.py  auth_manager.py  oauth_config.py  server.py
